# ttt-jailbreak

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
conf/: eval.yaml  jailbreak.yaml  random_search.yaml
conf/backend/: hf.yaml  tinker.yaml
conf/data/: alpaca.yaml  gsm8k.yaml  harmful_behaviors.yaml  jailbreakbench.yaml  math.yaml  transluce_cbrn.yaml
conf/defense/: default.yaml
conf/finetune_mode/: few_shot.yaml  prompt.yaml  target.yaml
conf/generate/: default.yaml
conf/hydra/: default.yaml
conf/judge/: _base.yaml  gpt_oss_120b.yaml  gpt_oss_20b.yaml  llama_3.1_70b_instruct.yaml  llama_3_70b_instruct.yaml  llama_3_8b_instruct.yaml
conf/judge/system_prompt/: rating.yaml  refusal.yaml  safety.yaml
conf/judge/validity_prompt/: default.yaml
conf/model/: gemma_7b_it.yaml  gpt_oss_120b.yaml  llama2_7b_chat.yaml  llama3.1_8b_instruct.yaml  llama3_70b_instruct.yaml  llama3_8b_instruct.yaml  qwen2.5_1.5b.yaml  qwen2.5_1.5b_instruct.yaml  qwen2.5_7b_instruct.yaml  qwen3_32b.yaml  qwen3_8b.yaml  vicuna_13b_v1.5.yaml
conf/trainer/: default.yaml
datasets/: alpaca.jsonl  invalid_generations_for_benchmark.jsonl  math.jsonl
datasets/harmful_behaviors/: README.md  harmful_behaviors_pair.csv
experiments/: cross_category_experiment.py  fewshot_rs_experiment.py  icl_fewshot_experiment.py
scripts/: evaluate.py  jailbreak.py
src/ttt_jailbreak/: __init__.py  utils.py
src/ttt_jailbreak/attack/: prompts.py  (+2 more)
tests/: conftest.py  test_data_utils.py  test_defense.py  test_eval_utils.py  test_judge.py  test_judging_results.py  test_ttt_backend.py
(+17 files in other folders)
